crates/courier-ftp/src/ui/trust/snapshots/courier_ftp__ui__trust__tests__certificate.snap
---
source: crates/courier-ftp/src/ui/trust/tests.rs
expression: "draw(&mut d, 80, 30).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ┌ Untrusted certificate ─────────────────────────────────────────────────────┐ "
" │The server's certificate could not be verified: unknown issuer.             │ "
" │                                                                            │ "
" │Host:         ftp.example.com:990                                           │ "
" │Subject:      ftp.example.com                                               │ "
" │Issuer:       CN=Example CA, O=Example Ltd                                  │ "
" │Valid from:   2026-01-01 00:00 UTC                                          │ "
" │Valid until:  2027-01-01 00:00 UTC                                          │ "
" │Hostname:     ✔ matches ftp.example.com                                     │ "
" │SHA-256:      9F:86:D0:81:88:4C:7D:65:9A:2F:EA:A0:C5:5A:D0:15:A3:BF:4F:1B:  │ "
" │              2B:0B:82:2C:D1:5D:6C:15:B0:F0:0A:08                           │ "
" │SHA-1:        A9:4A:8F:E5:CC:B1:9B:A6:1C:4C:08:73:D3:91:E9:87:98:2F:BB:D3   │ "
" │Session:      TLS 1.3, TLS13_AES_256_GCM_SHA384                             │ "
" │Chain:        2 certificates (Alt-D: details)                               │ "
" │                                                                            │ "
" │         [ Trust once ]  [ Always trust ]  [ Cancel ]  [ Details ]          │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
