crates/courier-ftp/src/ui/trust/snapshots/courier_ftp__ui__trust__tests__certificate_details.snap
---
source: crates/courier-ftp/src/ui/trust/tests.rs
expression: "draw(&mut d, 80, 30).backend()"
---
" ┌ Untrusted certificate ─────────────────────────────────────────────────────┐ "
" │Certificate 1 of 2 (server)                                                 │ "
" │Subject:      CN=ftp.example.com, O=Example Ltd                             │ "
" │Issuer:       CN=Example CA, O=Example Ltd                                  │ "
" │Serial:       3A:F1:09:7C                                                   │ "
" │Valid from:   2026-01-01 00:00 UTC                                          │ "
" │Valid until:  2027-01-01 00:00 UTC                                          │ "
" │Alt names:    ftp.example.com, www.example.com                              │ "
" │Public key:   RSA 2048                                                      │ "
" │Signature:    sha256WithRSAEncryption                                       │ "
" │SHA-256:      9F:86:D0:81:88:4C:7D:65:9A:2F:EA:A0:C5:5A:D0:15:A3:BF:4F:1B:  │ "
" │              2B:0B:82:2C:D1:5D:6C:15:B0:F0:0A:08                           │ "
" │SHA-1:        A9:4A:8F:E5:CC:B1:9B:A6:1C:4C:08:73:D3:91:E9:87:98:2F:BB:D3   │ "
" │                                                                            │ "
" │Certificate 2 of 2                                                          │ "
" │Subject:      CN=Example CA, O=Example Ltd                                  │ "
" │Issuer:       CN=Example CA, O=Example Ltd                                  │ "
" │Serial:       3A:F1:09:7C                                                   │ "
" │Valid from:   2026-01-01 00:00 UTC                                          │ "
" │Valid until:  2036-01-01 00:00 UTC                                          │ "
" │Alt names:    ftp.example.com, www.example.com                              │ "
" │Public key:   RSA 2048                                                      │ "
" │Signature:    sha256WithRSAEncryption                                       │ "
" │SHA-256:      9F:86:D0:81:88:4C:7D:65:9A:2F:EA:A0:C5:5A:D0:15:A3:BF:4F:1B:  │ "
" │              2B:0B:82:2C:D1:5D:6C:15:B0:F0:0A:08                           │ "
" │SHA-1:        A9:4A:8F:E5:CC:B1:9B:A6:1C:4C:08:73:D3:91:E9:87:98:2F:BB:D3   │ "
" │                                                                            │ "
" │         [ Trust once ]  [ Always trust ]  [ Cancel ]  [ Summary ]          │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
