crates/courier-ftp/src/ui/trust/snapshots/courier_ftp__ui__trust__tests__changed_certificate.snap
---
source: crates/courier-ftp/src/ui/trust/tests.rs
expression: "draw(&mut d, 80, 34).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ┌ WARNING: certificate changed ──────────────────────────────────────────────┐ "
" │The server's certificate differs from the one you trusted before!           │ "
" │Either the server got a new certificate, or someone is intercepting the     │ "
" │connection (a man-in-the-middle attack) to steal your password and data.    │ "
" │                                                                            │ "
" │Trusted:      1F:2E:3D:4C:5B:6A:79:88:97:A6:B5:C4:D3:E2:F1:00:1F:2E:3D:4C:  │ "
" │              5B:6A:79:88:97:A6:B5:C4:D3:E2:F1:00                           │ "
" │Offered:      9F:86:D0:81:88:4C:7D:65:9A:2F:EA:A0:C5:5A:D0:15:A3:BF:4F:1B:  │ "
" │              2B:0B:82:2C:D1:5D:6C:15:B0:F0:0A:08                           │ "
" │                                                                            │ "
" │Host:         ftp.example.com:990                                           │ "
" │Subject:      ftp.example.com                                               │ "
" │Issuer:       CN=Example CA, O=Example Ltd                                  │ "
" │Valid from:   2026-01-01 00:00 UTC                                          │ "
" │Valid until:  2027-01-01 00:00 UTC                                          │ "
" │Hostname:     ✔ matches ftp.example.com                                     │ "
" │SHA-1:        A9:4A:8F:E5:CC:B1:9B:A6:1C:4C:08:73:D3:91:E9:87:98:2F:BB:D3   │ "
" │Session:      TLS 1.3, TLS13_AES_256_GCM_SHA384                             │ "
" │Chain:        2 certificates (Alt-D: details)                               │ "
" │                                                                            │ "
" │[ ] I have verified the new certificate and want to connect                 │ "
" │                                                                            │ "
" │         [ Cancel ]  [ Trust once ]  [ Always trust ]  [ Details ]          │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
