crates/courier-ftp/src/ui/trust/snapshots/courier_ftp__ui__trust__tests__changed_host_key_wide.snap
---
source: crates/courier-ftp/src/ui/trust/tests.rs
expression: "draw(&mut d, 130, 26).backend()"
---
"                                                                                                                                  "
"                                                                                                                                  "
"                                                                                                                                  "
"                                                                                                                                  "
"   ┌ WARNING: host key changed ───────────────────────────────────────────────────────────────────────────────────────────────┐   "
"   │The server's host key does not match the key in the cache!                                                                │   "
"   │Either the server's administrator replaced the key, or someone is intercepting the connection (a man-in-the-middle attack)│   "
"   │to steal your password and data.                                                                                          │   "
"   │                                                                                                                          │   "
"   │Host:         web01.example.com:22                                                                                        │   "
"   │              Cached key                                           Offered key                                            │   "
"   │Key type:     ssh-ed25519 256                                      ssh-ed25519 256                                        │   "
"   │SHA-256:      SHA256:47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU   SHA256:uNiVztksCsDhcc0u9e8BujQXVUpKZIDTMczCvj3tD2s     │   "
"   │MD5:          MD5:d4:1d:8c:d9:8f:00:b2:04:e9:80:09:98:ec:f8:42:7e  MD5:16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48    │   "
"   │                                                                                                                          │   "
"   │Do not connect unless you know why the key changed. Ask the administrator for the new fingerprint and compare it.         │   "
"   │                                                                                                                          │   "
"   │[ ] I have verified the new key and want to connect                                                                       │   "
"   │[ ] Replace the cached key with the new one                                                                               │   "
"   │                                                                                                                          │   "
"   │                                              [ Cancel ]  [ Trust new key ]                                               │   "
"   └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘   "
"                                                                                                                                  "
"                                                                                                                                  "
"                                                                                                                                  "
"                                                                                                                                  "
