crates/courier-ftp/src/ui/trust/snapshots/courier_ftp__ui__trust__tests__unknown_host_key_vault_locked.snap
---
source: crates/courier-ftp/src/ui/trust/tests.rs
expression: "draw(&mut d, 80, 24).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"    ┌ Unknown host key ────────────────────────────────────────────────────┐    "
"    │The server's host key is unknown. You have no guarantee that the      │    "
"    │server is the computer you think it is.                               │    "
"    │                                                                      │    "
"    │Host:         web01.example.com:22                                    │    "
"    │Key type:     ssh-ed25519 256                                         │    "
"    │Fingerprint:  SHA256:uNiVztksCsDhcc0u9e8BujQXVUpKZIDTMczCvj3tD2s      │    "
"    │              MD5:16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48     │    "
"    │                                                                      │    "
"    │Trust the key only if the fingerprint matches the one the server's    │    "
"    │administrator gave you.                                               │    "
"    │                                                                      │    "
"    │[-] Always trust this host, add this key to the cache                 │    "
"    │The vault is locked: trusting applies to this connection only.        │    "
"    │                                                                      │    "
"    │                         [ OK ]  [ Cancel ]                           │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
